fix: prop updates for uptaking new listing card (#1136)
* fix: prop updates for uptaking new listing card

* fix: styling updates to the home page listing cards

* fix: tag color

* style: updates horizontal scroll margins

--- a/sites/public/styles/overrides.scss
+++ b/sites/public/styles/overrides.scss
@@ -319,9 +319,13 @@ li.progress-nav__item {
 
 .hero {
   @apply font-bold;
-  @apply mx-4;
+  @apply mx-2;
   @apply mb-4;
   @apply rounded-2xl;
+
+  @screen sm {
+    @apply mx-4;
+  }
 }
 
 .hero__title {
@@ -492,12 +496,18 @@ li.progress-nav__item {
 }
 
 .latest-listings {
-  .listings-row_content {
+  .listings-row_table,
+  .listings-row_footer_container {
     display: none;
   }
 
   .listings-row {
     margin: 0 15px;
+  }
+
+  .listings-row_content {
+    width: 100%;
+    @apply px-0;
   }
 
   .listings-row:hover {
